--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="alert-box" id="alert">
         <p>Alert 박스</p>
-        <button onclick="document.getElementBsyId('alert').style.display='none';">닫기</button>
+        <button onclick="document.getElementById('alert').style.display='none';">닫기</button>
     </div>
     <button onclick="document.getElementById('alert').style.display = 'block';">열기</button>
     
