--- a/index.html
+++ b/index.html
@@ -8,19 +8,38 @@
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <h1>홈페이지 헤더</h1>
+            <a href="#">
+                <img src="images/yp_logo2.png" alt="크루 로고" title="크루 로고" height="70px">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="#">홈</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">BUSINESS</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">CONTACT US</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!--
     <div class="alert-box" id="alert">
         <p>Alert 박스</p>
         <button onclick="document.getElementBsyId('alert').style.display='none';">닫기</button>
     </div>
     <button onclick="document.getElementById('alert').style.display = 'block';">열기</button>
-    
+    -->
+
 
 
     <h2 id="hello"> 양파월드에 오신 걸 환영합니다</h2>
 
     <script>
-    document.getElementById('hello').style.fontSize = '30px';
-    </script>            
+        document.getElementById('hello').style.fontSize = '30px';
+    </script>
 
 
     </div>
