--- a/member.html
+++ b/member.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div class="container">
             <h1>홈페이지 헤더</h1>
             <a href="#">
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="#">홈</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#"><u>ABOUT</u></a></li>
                     <li><a href="#">BUSINESS</a></li>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">CONTACT US</a></li>
@@ -27,7 +27,30 @@
         </div>
     </header>
 
-    <section id="contents">
-        
+    <div id="contents">
+        <h1>크루 소개</h1>
+        <ul class="mem-list">
+            <li>
+                <img src="images/F5_profile.jpg">
+                <div class="profile">
+                    <h2>F5</h2>
+                    <p>~프로필 쓰기~</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/ESC_profile.jpg">
+                <div class="profile">
+                    <h2>ESC</h2>
+                    <p>~프로필 쓰기~</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/Shift_profile.jpg">
+                <div class="profile">
+                    <h2>Shift</h2>
+                    <p>~프로필 쓰기~</p>
+                </div>
+            </li>
+        </ul>
     </section>
 </body>
