mem second commit

--- a/member.html
+++ b/member.html
@@ -30,21 +30,21 @@
     <div id="contents">
         <h1>크루 소개</h1>
         <div class="mem-list">
-            <div class="box">
+            <div class="box-black">
                 <img src="images/F5_profile.jpg">
                 <div class="profile">
                     <h2>F5</h2>
                     <p>~프로필 쓰기~</p>
                 </div>
             </div>
-            <div class="box">
+            <div class="box-white">
                 <img src="images/ESC_profile.jpg">
                 <div class="profile">
                     <h2>ESC</h2>
                     <p>~프로필 쓰기~</p>
                 </div>
             </div>
-            <div class="box">
+            <div class="box-black">
                 <img src="images/Shift_profile.jpg">
                 <div class="profile">
                     <h2>Shift</h2>
